修复JDK21 编译环境